--- a/service.html
+++ b/service.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/9f55a4a80a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
-    <div id="topMenu">
+
+    <div id="topMenu" class="topMenu">
         <div class="wrap">
-        <div id="topLinks">
+            <div id="topLinks">
                 <ul>
-                    <li> 
+                    <li>
                         <a href="index.html">Home</a>
                     </li>
                     <li>
@@ -19,34 +23,127 @@
                     </li>
                     <li>
                         <a href="service.html">Services</a>
-                     </li>
+                    </li>
                     <li><a href="hire.html">Hire us</a></li>
                     <li><a href="contact.html">Contact us</a></li>
-               </ul>
-              </div>
-              <a href="" class="logo">PET SHOP</a>
-          </div>
-     </div>
-
-    <div class="wrap">
-        <div id="banner">
-            <h1 class="logo">PET SHOP</h1>
-        <div id="action">
-            href="/Shop">SHOP NOW</a>
-        </div>
+                </ul>
+            </div>
+            <a href="" class="logo">PET SHOP</a>
         </div>
     </div>
 
-        <div id="fishFeature" class="feature">
-            <div class="leftColumn">
+    <div class="services-header">
+        <h1>Our Services</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur numquam aspernatur facere, sunt
+            amet, obcaecati quam quis placeat expedita aut optio voluptate minima fugit nihil velit esse delectus,
+            qui natus? Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+    </div>
+
+    <div class="services-box">
+        <div class="box box1">
+            <div class="logo-box">
+                <i class="fa-solid fa-cat fa-2xl"></i>
             </div>
-            <div class="rightColumn">
+            <p class="content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur numquam aspernatur facere, sunt
+                amet, obcaecati quam quis placeat expedita aut optio voluptate minima fugit nihil velit esse delectus,
+                qui natus? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate natus excepturi non animi
+                deserunt reiciendis cumque recusandae. Hic quaerat alias dolor. Expedita reiciendis quasi ab ullam
+                deserunt nostrum, quae fugit.
+            </p>
+        </div>
+
+        <div class="box box2">
+            <div class="logo-box">
+                <i class="fa-solid fa-cat fa-2xl"></i>
             </div>
-        </div>            
+            <p class="content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur numquam aspernatur facere, sunt
+                amet, obcaecati quam quis placeat expedita aut optio voluptate minima fugit nihil velit esse delectus,
+                qui natus? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate natus excepturi non animi
+                deserunt reiciendis cumque recusandae. Hic quaerat alias dolor. Expedita reiciendis quasi ab ullam
+                deserunt nostrum, quae fugit.
+            </p>
+        </div>
+
+        <div class="box box3">
+            <div class="logo-box">
+                <i class="fa-solid fa-cat fa-2xl"></i>
+            </div>
+            <p class="content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur numquam aspernatur facere, sunt
+                amet, obcaecati quam quis placeat expedita aut optio voluptate minima fugit nihil velit esse delectus,
+                qui natus? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate natus excepturi non animi
+                deserunt reiciendis cumque recusandae. Hic quaerat alias dolor. Expedita reiciendis quasi ab ullam
+                deserunt nostrum, quae fugit.
+            </p>
+        </div>
+
+        <div class="box box4">
+            <div class="logo-box">
+                <i class="fa-solid fa-cat fa-2xl"></i>
+            </div>
+            <p class="content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur numquam aspernatur facere, sunt
+                amet, obcaecati quam quis placeat expedita aut optio voluptate minima fugit nihil velit esse delectus,
+                qui natus? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate natus excepturi non animi
+                deserunt reiciendis cumque recusandae. Hic quaerat alias dolor. Expedita reiciendis quasi ab ullam
+                deserunt nostrum, quae fugit.
+            </p>
+        </div>
+
+        <div class="box box5">
+            <div class="logo-box">
+                <i class="fa-solid fa-cat fa-2xl"></i>
+            </div>
+            <p class="content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur numquam aspernatur facere, sunt
+                amet, obcaecati quam quis placeat expedita aut optio voluptate minima fugit nihil velit esse delectus,
+                qui natus? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate natus excepturi non animi
+                deserunt reiciendis cumque recusandae. Hic quaerat alias dolor. Expedita reiciendis quasi ab ullam
+                deserunt nostrum, quae fugit.
+            </p>
+        </div>
+
+        <div class="box box6">
+            <div class="logo-box">
+                <i class="fa-solid fa-cat fa-2xl"></i>
+            </div>
+            <p class="content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur numquam aspernatur facere, sunt
+                amet, obcaecati quam quis placeat expedita aut optio voluptate minima fugit nihil velit esse delectus,
+                qui natus? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate natus excepturi non animi
+                deserunt reiciendis cumque recusandae. Hic quaerat alias dolor. Expedita reiciendis quasi ab ullam
+                deserunt nostrum, quae fugit.
+            </p>
+        </div>
+    </div>
+
+    <table class="footer">
+        <tr>
+            <td>
+                <h3>About us</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ducimus, at earum eaque
+                    similique quia vitae laboriosam tenetur deserunt!</p>
+            </td>
+            <td>
+                <h3>Useful links</h3>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Contact us</a></li>
+                    <li><a href="">Services</a></li>
+                </ul>
+            </td>
+            <td>
+                <h3> Contact</h3>
+                <p>001 28982 28938</p>
+                <p>helli@mypetshop.com</p>
+            </td>
+        </tr>
+    </table>
+
 </body>
-<style>
-    #topLinks li {
- float: left;
-}
 </style>
+
 </html>
